# kitsune

./: .dockerignore  .gitignore  CLAUDE.md  PLAN.md  main.py  pyproject.toml
.claude/: settings.local.json
docker/: docker-compose.yml
docker/kitsune/: Dockerfile
docker/marimo/: Dockerfile  marimo.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  Header.tsx  NotebookPanel.tsx  Sidebar.tsx
frontend/src/hooks/: useNotebooks.ts  useSession.ts
kitsune/: agent.py  config.py  logging.py  models.py  utils.py
kitsune/agents/: marimo.py
kitsune/agents/tools/: notebook.py  websearch.py
kitsune/services/: sandbox.py
kitsune/tools/: websearch.py
kitsune/ui/: chat.py  dashboard.py  layout.py  notebooks.py
kitsune/ui/static/: chat.css  layout.css
notebooks/: Welcome.py  sample.py
