[project]
name = "kitsune"
version = "0.1.0"
description = "AI agent microservice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "logfire",
    "marimo",
    "pydantic-ai>=1.59.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
notebooks = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "scipy",
]
