[project]
name = "kitsune"
version = "0.1.0"
description = "AI agent microservice"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker",
    "fastapi",
    "httpx",
    "logfire",
    "pydantic-ai",
    "uvicorn[standard]",
]

[project.optional-dependencies]
notebooks = [
    "marimo",
    "numpy",
    "pandas",
    "polars",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "scipy",
]
